# spotify-volume-controller-cpp

./: .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  Client.cpp  Client.h  Config.cpp  Config.h  ConfigExample.cpp  Credentials.cpp  Credentials.h  HACKING.md  HttpUtils.cpp  HttpUtils.h  README.md  Server.cpp  Server.h  SpotifyListener.cpp  SpotifyListener.h  VolumeController.cpp  VolumeController.h  config-example.json  http_utils.cpp  http_utils.h  main.cpp  oauth.cpp  oauth.h  spotify-volume-controller-cpp.sln  spotify-volume-controller-cpp.vcxproj  spotify-volume-controller-cpp.vcxproj.filters  spotify.cpp  spotify.h  vcpkg.json
.github/workflows/: ci.yml  msbuild.yml
cmake/: dev-mode.cmake  fetch-content.cmake  install-rules.cmake  variables.cmake
include/: Config.h  SpotifyListener.h  VolumeController.h  key_hooks.h  oauth.h  updater.h
source/: Client.cpp  Client.h  Config.cpp  Config.h  SpotifyListener.cpp  SpotifyListener.h  VolumeController.cpp  VolumeController.h  data_types.h  http_utils.cpp  http_utils.h  key_hooks.cpp  key_hooks.h  main.cpp  oauth.cpp  oauth.h  test.cpp  updater.cpp  updater.h  windows_helpers.cpp  windows_helpers.h
src/: Client.cpp  Config.cpp  SpotifyListener.cpp  VolumeController.cpp  http_utils.cpp  key_hooks.cpp  main.cpp  oauth.cpp  updater.cpp
test/: CMakeLists.txt
test/source/: spotify_volume_controller_test.cpp
